# speed_typing

./: .gitignore  README.md
speed_typing/: CMakeLists.txt  speed_typing-Info.plist  users.txt
speed_typing.xcodeproj/: project.pbxproj
speed_typing.xcodeproj/project.xcworkspace/xcuserdata/ilamatveev.xcuserdatad/: UserInterfaceState.xcuserstate
speed_typing.xcodeproj/xcshareddata/xcschemes/: speed_typing 1.xcscheme  speed_typing.xcscheme
speed_typing.xcodeproj/xcuserdata/ilamatveev.xcuserdatad/xcschemes/: xcschememanagement.plist
speed_typing/include/: Button.hpp  Menu.hpp  ModeStrategy.hpp  TextBox.hpp  User.hpp  UserManager.hpp
speed_typing/src/: Button.cpp  Menu.cpp  ModeStrategy.cpp  ResourcePath.cpp  TextBox.cpp  User.cpp  UserManager.cpp  main.cpp
